Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Critical
-
Resolution: Fixed
-
Affects Version/s: 10.1.8, 10.0.22-galera
-
Fix Version/s: 10.0.26-galera
-
Component/s: Replication
-
Labels:None
Description
Hello,
Considering the following architecture:
- N-nodes MariaDB Galera Cluster
- Standalone MariaDB server replicating from any above cluster node
In the case where the master node is restarted, the slave stops with this error:
1593 The slave I/O thread stops because a fatal error is encountered when it tried to SELECT @master_binlog_checksum. Error: WSREP has not yet prepared node for application use
It has to be restarted manually (START SLAVE) in order to reconnect
As Galera replication implies that, when a node is restarted, there is a short time when the node is available on port 3306, but the node cannot accept commands because it is processing an Incremental State Transfer request, I propose to have the slave thread autoreconnect instead of stopping when it encounters this particular error.
Attachments
Issue Links
- links to